[tool.poetry]
name = "python-download"
version = "0.0.4"
description = "Python for download."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/python-modules/tree/main/python-download"
repository = "https://github.com/ChenyangGao/python-modules/tree/main/python-download"
keywords = ["download"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
http_response = ">=0.0.9"
python-asynctools = ">=0.1.3"
python-concurrenttools = ">=0.1.4"
python-filewrap = "0.2.9"
python-http_request = ">=0.1.6.3"

[tool.poetry.scripts]
python-download = "download.__main__:main"
download = "download.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "download"
