[tool.poetry]
name = "python-httpfile"
version = "0.0.6"
description = "Python httpfile."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/python-modules/tree/main/python-httpfile"
repository = "https://github.com/ChenyangGao/python-modules/tree/main/python-httpfile"
keywords = ["http", "file", "wrapper"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
errno2 = ">=0.0.5"
http_response = ">=0.0.9"
python-argtools = ">=0.0.3"
python-asynctools = ">=0.1.3.4"
python-filewrap = ">=0.3.0"
python-http_request = ">=0.1.7.1"
urllib3_future_request = ">=0.0.1.4"
yarl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "httpfile"
