[tool.poetry]
name = "urllib3_future_request"
version = "0.0.2"
description = "urllib3.future request extension."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/python-modules/tree/main/urllib3_future_request"
repository = "https://github.com/ChenyangGao/python-modules/tree/main/urllib3_future_request"
keywords = ["urllib3.future", "http.client", "request"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
http_response = ">=0.0.9"
python-asynctools = ">=0.1.3.4"
python-cookietools = ">=0.1.5"
python-dicttools = ">=0.0.5"
python-filewrap = ">=0.3.0"
python-http_request = ">=0.1.7.1"
"urllib3.future" = "*"
yarl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "urllib3_future_request"
